--- a/index.html
+++ b/index.html
@@ -34,17 +34,26 @@
             </li>
           </ul>
         </nav>
-        <div class="basket">
-          <span class='bag'>
-            <svg width="18" height="20" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M5 6L5 5C5 2.79086 6.79086 1 9 1V1C11.2091 1 13 2.79086 13 5L13 6" stroke="white"
-                stroke-width="2" stroke-linecap="round" />
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M0.585786 5.58579C0 6.17157 0 7.11438 0 9V12C0 15.7712 0 17.6569 1.17157 18.8284C2.34315 20 4.22876 20 8 20H10C13.7712 20 15.6569 20 16.8284 18.8284C18 17.6569 18 15.7712 18 12V9C18 7.11438 18 6.17157 17.4142 5.58579C16.8284 5 15.8856 5 14 5H4C2.11438 5 1.17157 5 0.585786 5.58579ZM7 10C7 9.44772 6.55228 9 6 9C5.44772 9 5 9.44772 5 10V12C5 12.5523 5.44772 13 6 13C6.55228 13 7 12.5523 7 12V10ZM13 10C13 9.44772 12.5523 9 12 9C11.4477 9 11 9.44772 11 10V12C11 12.5523 11.4477 13 12 13C12.5523 13 13 12.5523 13 12V10Z"
-                fill="white" />
+        <div class="mobile_right">
+          <div class="basket">
+            <span class='bag'>
+              <svg width="18" height="20" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5 6L5 5C5 2.79086 6.79086 1 9 1V1C11.2091 1 13 2.79086 13 5L13 6" stroke="white"
+                  stroke-width="2" stroke-linecap="round" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M0.585786 5.58579C0 6.17157 0 7.11438 0 9V12C0 15.7712 0 17.6569 1.17157 18.8284C2.34315 20 4.22876 20 8 20H10C13.7712 20 15.6569 20 16.8284 18.8284C18 17.6569 18 15.7712 18 12V9C18 7.11438 18 6.17157 17.4142 5.58579C16.8284 5 15.8856 5 14 5H4C2.11438 5 1.17157 5 0.585786 5.58579ZM7 10C7 9.44772 6.55228 9 6 9C5.44772 9 5 9.44772 5 10V12C5 12.5523 5.44772 13 6 13C6.55228 13 7 12.5523 7 12V10ZM13 10C13 9.44772 12.5523 9 12 9C11.4477 9 11 9.44772 11 10V12C11 12.5523 11.4477 13 12 13C12.5523 13 13 12.5523 13 12V10Z"
+                  fill="white" />
+              </svg>
+            </span>
+            <span class="red_circle"></span>
+          </div>
+          <span id="hamburger">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M2 6H22" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M2 12H22" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M2 18H22" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </span>
-          <span class="red_circle"></span>
         </div>
       </header>
     </div>
@@ -76,30 +85,19 @@
   <section id="features" class="container">
     <h1 class="title">Why Choosing Us</h1>
     <div class="carts">
-      <div class="cart">
-        <span>
-          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M25.9788 14.7497L18.1052 23.7179L14.1096 19.6555C13.8363 19.3775 13.3936 19.3775 13.1203 19.6555C12.8469 19.9334 12.8469 20.3835 13.1203 20.6615L17.6392 25.2566C17.7703 25.3903 17.9485 25.4648 18.1341 25.4648C18.1407 25.4648 18.1472 25.4648 18.1537 25.4643C18.3464 25.4586 18.5278 25.3732 18.6561 25.2271L27.0232 15.6974C27.2807 15.4043 27.2555 14.9546 26.9672 14.6928C26.678 14.4315 26.2368 14.4571 25.9788 14.7497Z"
-              fill="#F79489" />
-            <path
-              d="M39.9777 19.9988C39.991 19.9451 40 19.8896 40 19.8317C40 17.9493 38.0309 16.9766 36.2931 16.1178C35.0596 15.5086 33.7847 14.8781 33.4452 14.0838C33.0996 13.2731 33.5877 11.9519 34.0587 10.6736C34.7158 8.8925 35.3948 7.0511 34.1418 5.80953C32.9129 4.59103 31.1163 5.00347 29.378 5.40415C28.1615 5.68382 26.9028 5.97243 26.0648 5.6212C25.2467 5.27796 24.5667 4.2139 23.9091 3.18373C22.9552 1.69168 21.875 0 20 0C18.1216 0 17.0619 1.7284 16.1274 3.25388C15.4788 4.31277 14.8079 5.40697 13.9908 5.74973C13.1556 6.1005 11.8836 5.78269 10.6538 5.47618C8.90176 5.0402 7.09035 4.58726 5.85869 5.81C4.61421 7.04356 5.21722 8.89438 5.80124 10.6849C6.21813 11.9623 6.64878 13.2834 6.30027 14.1013C5.9603 14.8988 4.74194 15.5236 3.56298 16.1282C1.89307 16.9841 0 17.9545 0 19.8326C0 19.891 0.00949638 19.947 0.0227911 20.0012C0.00949638 20.0549 0.000475003 20.1104 0.000475003 20.1683C0.000475003 22.0464 1.89355 23.0168 3.56393 23.8728C4.74194 24.4769 5.96078 25.1016 6.30074 25.8992C6.64925 26.717 6.2186 28.0382 5.80172 29.316C5.21817 31.1061 4.61469 32.9564 5.85869 34.1905C7.0913 35.4132 8.90271 34.9617 10.6543 34.5243C11.8845 34.2183 13.157 33.9014 13.9917 34.2517C14.8084 34.594 15.4793 35.6882 16.1279 36.7466C17.0628 38.2716 18.1221 40 20.0005 40C21.8755 40 22.9562 38.3083 23.9096 36.8163C24.5677 35.7861 25.2476 34.722 26.0643 34.3788C26.9056 34.0266 28.162 34.3157 29.378 34.5959C31.1153 34.9956 32.9129 35.4099 34.1408 34.1909C35.3953 32.9489 34.7158 31.107 34.0587 29.3264C33.5872 28.0481 33.0996 26.7269 33.4447 25.9171C33.7847 25.1224 35.0596 24.4919 36.2931 23.8827C38.0305 23.0244 40 22.0512 40 20.1688C40.0005 20.109 39.991 20.053 39.9777 19.9988ZM35.6583 22.6166C34.1935 23.3403 32.6789 24.0889 32.1333 25.3653C31.5697 26.6883 32.1552 28.2755 32.7211 29.8099C33.2472 31.237 33.7448 32.5859 33.1337 33.1904C32.4647 33.8552 31.121 33.5459 29.6999 33.2192C28.2622 32.8886 26.7755 32.5463 25.5097 33.077C24.2823 33.5921 23.4813 34.8463 22.7064 36.0592C21.876 37.3587 21.0916 38.5861 20.0005 38.5861C18.9231 38.5861 18.1568 37.3356 17.3448 36.0116C16.579 34.7616 15.7865 33.4687 14.5463 32.9494C13.2714 32.4136 11.7649 32.7893 10.3062 33.1532C8.87707 33.5087 7.52718 33.8468 6.86577 33.1904C6.23759 32.568 6.68392 31.1988 7.15635 29.7492C7.65348 28.226 8.16675 26.6507 7.61217 25.3479C7.07184 24.0804 5.62081 23.3365 4.21775 22.6166C2.78144 21.8807 1.42443 21.1853 1.42443 20.1669C1.42443 20.1085 1.41494 20.0525 1.40164 19.9979C1.41494 19.9442 1.42396 19.8887 1.42396 19.8307C1.42396 18.8123 2.78049 18.1169 4.2168 17.381C5.62034 16.6616 7.07184 15.9177 7.6117 14.6493C8.16628 13.347 7.653 11.7721 7.15588 10.2485C6.68344 8.7988 6.23664 7.42964 6.86577 6.80674C7.52575 6.15088 8.87564 6.48799 10.3058 6.8444C11.7634 7.20741 13.27 7.58454 14.5454 7.04874C15.7856 6.52895 16.578 5.23606 17.3448 3.98602C18.1563 2.66158 18.9226 1.41107 20 1.41107C21.0911 1.41107 21.8755 2.63851 22.7055 3.93846C23.4808 5.15131 24.2818 6.40559 25.5097 6.92115C26.7755 7.45177 28.2622 7.10948 29.6999 6.77849C31.121 6.45173 32.4643 6.1424 33.1342 6.80768C33.7443 7.41175 33.2467 8.7602 32.7207 10.1877C32.1547 11.7226 31.5692 13.3098 32.1333 14.6333C32.6779 15.9092 34.193 16.6578 35.6578 17.3815C37.1582 18.1226 38.5755 18.8232 38.5755 19.8307C38.5755 19.8891 38.585 19.9451 38.5983 19.9993C38.585 20.053 38.576 20.1085 38.576 20.1664C38.576 21.1754 37.1587 21.8755 35.6583 22.6166Z"
-              fill="#F79489" />
-          </svg>
-        </span>
-        <h3 class="cart_title">Professionalism</h3>
-        <p class="cart_text">We deliver the final work with great professional way.</p>
-        <a class="more_info" href="#">more info</a>
-      </div>
+
     </div>
   </section>
   <!-- section features end -->
 
   <!-- section ideas start -->
   <section id="ideas" class="container">
+    <div class=" mobile_left">
+      <img class="ideas" src="./images/ideas.svg" alt="">
+    </div>
     <div class="ideas_left">
       <h1 class="title">Visualize your ideas with us</h1>
-      <p>
+      <p class="text">
         We are ready to help you build and also realize the room design that you dream of, with our experts and also the
         best category recommendations from us
       </p>
@@ -107,7 +105,7 @@
         <div class="ideas_type">
           <div class="ideas_name_icon">
             <h3 class="ideas_name">Modern</h3>
-            <span>
+            <span class="plus">
               <svg width="16" height="2" viewBox="0 0 16 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 1L16 1" stroke="#F79489" />
               </svg>
@@ -172,7 +170,7 @@
     <div class="ideas_right">
       <img class="ideas" src="./images/ideas.svg" alt="">
     </div>
-    <a class="more_info" href="#">See more catagory</a>
+    <a class="more_info" href="#">See more category</a>
   </section>
   <!-- section ideas end -->
 
@@ -180,52 +178,98 @@
   <section id="products" class="container">
     <h1 class="title">Featured Product</h1>
     <div class="product_carts">
-      <a href="#" class="product_cart">
-        <img class="product" src="./images/product.svg" alt="Product">
-        <p class="product_name">Product</p>
-        <p class="product_category">Category</p>
-        <div class="stars">
-          <span>
-            <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M8 0L10.7193 4.60228L16 5.72949L12.4 9.70106L12.9443 15L8 12.8523L3.05573 15L3.6 9.70106L0 5.72949L5.28065 4.60228L8 0Z"
-                fill="#FFCB45" />
-            </svg>
-          </span>
-          <span>
-            <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M8 0L10.7193 4.60228L16 5.72949L12.4 9.70106L12.9443 15L8 12.8523L3.05573 15L3.6 9.70106L0 5.72949L5.28065 4.60228L8 0Z"
-                fill="#FFCB45" />
-            </svg>
-          </span>
-          <span>
-            <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M8 0L10.7193 4.60228L16 5.72949L12.4 9.70106L12.9443 15L8 12.8523L3.05573 15L3.6 9.70106L0 5.72949L5.28065 4.60228L8 0Z"
-                fill="#FFCB45" />
-            </svg>
-          </span>
-          <span>
-            <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M8 0L10.7193 4.60228L16 5.72949L12.4 9.70106L12.9443 15L8 12.8523L3.05573 15L3.6 9.70106L0 5.72949L5.28065 4.60228L8 0Z"
-                fill="#FFCB45" />
-            </svg>
-          </span>
-          <span>
-            <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M8 0L10.7193 4.60228L16 5.72949L12.4 9.70106L12.9443 15L8 12.8523L3.05573 15L3.6 9.70106L0 5.72949L5.28065 4.60228L8 0Z"
-                fill="#FFCB45" />
-            </svg>
-          </span>
-        </div>
-        <div class="product_id">IDR 795.000</div>
-      </a>
+
     </div>
   </section>
   <!-- section products end -->
+
+  <!-- section about start -->
+  <section id="about">
+    <div class="container">
+      <h1 class="title">What they say about our services</h1>
+      <div class="comments">
+
+      </div>
+    </div>
+  </section>
+  <!-- section about end -->
+
+  <!-- section contact start -->
+  <section id="contact" class="container">
+    <div class="contact_left">
+      <img src="./images/contact.svg" alt="image" class="contact">
+    </div>
+    <div class="contact_right">
+      <h1 class="title">Make your room feel homey</h1>
+      <div class="text">
+        <p class="top">
+          We help people not only to make the room at home better, but we help people to feel a more homey and
+          comfortable room, you don’t have to worry about the result because of these interiors are made by people who
+          are professionals in their dields with an elegant and lucuriois style and with premium quality materials
+        </p>
+        <p class="bottom">
+          Contact us if you are interested in working with us
+        </p>
+      </div>
+      <div class="input">
+        <input type="email" id="email" placeholder="Insert your email address">
+        <button type="submit">
+          <label for="email">
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M4.64645 1.64645C4.84171 1.45118 5.15829 1.45118 5.35355 1.64645L11.3536 7.64645C11.5488 7.84171 11.5488 8.15829 11.3536 8.35355L5.35355 14.3536C5.15829 14.5488 4.84171 14.5488 4.64645 14.3536C4.45118 14.1583 4.45118 13.8417 4.64645 13.6464L10.2929 8L4.64645 2.35355C4.45118 2.15829 4.45118 1.84171 4.64645 1.64645Z"
+                fill="#F79489" />
+            </svg>
+          </label>
+        </button>
+      </div>
+    </div>
+  </section>
+  <!-- section contact end -->
+
+  <!-- footer start -->
+  <footer>
+    <div class="container">
+      <div class="footer_top">
+        <a class="logo_footer" href="#section_one">
+          <img src="./logo/logoFooter.svg" alt="Logo" id="logo_footer">
+        </a>
+        <div class="footer_texts">
+          <h3 class="footer_texts_title">Features</h3>
+          <a href="#" class="footer_text">Our Features</a>
+          <a href="#" class="footer_text">Pricing</a>
+          <a href="#" class="footer_text">Affiliate Program</a>
+          <a href="#" class="footer_text">Press Kit</a>
+        </div>
+        <div class="footer_texts">
+          <h3 class="footer_texts_title">Support</h3>
+          <a href="#" class="footer_text">Account</a>
+          <a href="#" class="footer_text">Help</a>
+          <a href="#" class="footer_text">Contact Us</a>
+        </div>
+        <div class="footer_texts">
+          <h3 class="footer_texts_title">Legal</h3>
+          <a href="#" class="footer_text">Privacy Policy</a>
+          <a href="#" class="footer_text">Terms of Use</a>
+        </div>
+        <div class="footer_texts">
+          <h3 class="footer_texts_title">Social Media</h3>
+          <a href="#" class="footer_text">Twitter</a>
+          <a href="#" class="footer_text">Product Hunt</a>
+          <a href="#" class="footer_text">Instagram</a>
+          <a href="#" class="footer_text">Github</a>
+        </div>
+      </div>
+      <div class="footer_bottom">Copyright 2021 ©shady rhymes</div>
+    </div>
+  </footer>
+  <!-- footer end -->
+
+  <!-- script js file -->
+  <script src="./dataFeatures.js"></script>
+  <script src="./dataProducts.js"></script>
+  <script src="./dataAbout.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
