--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li class="dropdown">
               <button onclick="dropdown()">
                 Furniture
-                <span>
+                <span class="arrow">
                   <svg width="9" height="5" viewBox="0 0 9 5" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1 1L4.5 4L8 1" stroke="white" />
                   </svg>
@@ -73,7 +73,7 @@
               <li class="dropdown">
                 <button onclick="dropdownMobile()">
                   Furniture
-                  <span>
+                  <span class="arrowMob">
                     <svg width="9" height="5" viewBox="0 0 9 5" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M1 1L4.5 4L8 1" stroke="black" />
                     </svg>
